# Currency_Exchange_FastAPI

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2e668781fd82_.py  9518fba2d753_.py  a4177eb1b6dc_add_unique_constraint_on_currency_pair.py  a7a562320ea8_initial_tables.py  c662d3fa972d_initial_tables.py  d08de2039c40_fix_rate_precision.py
nginx/: dev.conf
nginx/frontend/: index.html
nginx/frontend/js/: app.js
src/: main.py
src/currency_exchange_app/: config.py  exceptions.py  handlers.py  logger.py  main.py  middlewares.py
src/currency_exchange_app/api/: currency.py  dependencies.py  exchange.py  exchange_rate.py
src/currency_exchange_app/db/: __init__.py  base.py  dependencies.py  engine.py
src/currency_exchange_app/models/: __init__.py  currency.py  exchange_rate.py
src/currency_exchange_app/repositories/: __init__.py  currency.py  exchange_rate.py
src/currency_exchange_app/schemas/: __init__.py  currency.py  exchange.py  exchange_rate.py
src/currency_exchange_app/services/: __init__.py  currency.py  exchange.py  exchange_rate.py
src/currency_exchange_app/utils/: decorators.py
src/сurrency_exchange_app/api/: currency.py
src/сurrency_exchange_app/schemas/: currency.py
tests/: conftest.py  control_cases.py  test_currency_api.py  test_currency_repository.py  test_currency_service.py  test_ex_rate_api.py  test_exchange_api.py
