[project]
name = "currency-exchange"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry-DVal",email = "149782954+Dmitry-DVal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]
