[project]
name = "currency-exchange"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry-DVal",email = "149782954+Dmitry-DVal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.0"
mypy = "^1.16.1"
black = "^25.1.0"
aiosqlite = "^0.21.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]

[tool.mypy]
exclude = [
    "experiments",
]